# FlappyBirds

./: Build.sh  CMakeLists.txt  Controllable.cpp  Moveable.cpp  Pipes.cpp  PipesManager.cpp  README.md  Run.sh  Sprite.cpp  main.cpp  testRunner.cpp
Headers/: Controllable.hpp  Global.hpp  Moveable.hpp  Pipes.hpp  PipesManager.hpp  Sprite.hpp
